...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".SettingsScreen2"
    android:id="@+id/settingsScreen2">


    <Button
        android:id="@+id/backBtn"
        android:layout_width="68dp"
        android:layout_height="64dp"
...
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backarrow" />

    <Button
        android:id="@+id/kgsBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="412dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
...
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#262626"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/bluebuttonkg"
        android:layout_width="18dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
...
        android:text="Change Units"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <Button
        android:id="@+id/lbsBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
...
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#262626"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/bluebuttonlb"
        android:layout_width="18dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
...
