<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:clickable="false"
    android:id="@+id/homeScreen">

    <Button
        android:id="@+id/menuBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/menu" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="76dp"
        android:background="#65B1D2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Button
        android:id="@+id/weeklyAvgBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="319dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:background="#65B1D2"
        android:text="View Weekly Average"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timesViewedThisWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="175dp"
        android:text="Times weighed this week:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/sideMenu"
        android:layout_width="269dp"
        android:layout_height="732dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/sidemenu" />

    <Button
        android:id="@+id/logOutBtn3"
        android:layout_width="212dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="#737989"
        android:text="Log Out"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settingsBtn2"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#737989"
        android:text="Settings"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>