<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".GraphScreen"
    android:id="@+id/graphScreen">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/backarrow" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="97dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#3B95BD"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/graphImage"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="326dp"
        android:layout_height="286dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:background="#FFFFFF"
        android:text="graph placeholder" />

    <Button
        android:id="@+id/menuBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/menu" />

    <TextView
        android:id="@+id/AvgWeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:text="Weekly Average Weight: " />

    <ImageView
        android:id="@+id/sideMenu"
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-7dp"
        android:layout_marginEnd="-34dp"
        android:layout_marginRight="-34dp"
        android:layout_marginBottom="2dp"
        app:srcCompat="@drawable/sidemenu" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="212dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#737989"
        android:text="Log Out"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#737989"
        android:text="Settings"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />


</RelativeLayout>